# SmartHome

./: CMakeLists.txt  SmartHome_README.md
Actionneurs/ServoMoteur/: Servo.c
Actionneurs/led/: led.c  led.h
Capteurs/Eau/: WaterSensor.c
Capteurs/Gaz/: gas_sensor.c
Capteurs/Lumiere/: LightSensor.c
Capteurs/Moisissure/: MoistureSensor.c
Capteurs/Mouvement/: Mouvement.c  Mouvement.h
Capteurs/Temperature/: TempSensor.c
Capteurs/rfid/: rfid.c  rfid.h
Dashboard/: Server.c
Synchronisation/: EventGroupe.c  Queues.c
main/: CMakeLists.txt  main.c
